tags page added with its actions

--- a/client/package.json
+++ b/client/package.json
@@ -61,6 +61,7 @@
     "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.11",
+    "@types/quill": "^2.0.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
